testsuite/tests/unlifted-datatypes/should_fail/all.T
test('UnlDataNullaryPoly', normal, compile_fail, ['-fprint-explicit-runtime-reps'])
test('UnlDataInvalidResKind1', normal, compile_fail, [''])
